<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clSnackbar"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/statusIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseAbsenceTypeId"/>

        <Spinner
            android:id="@+id/absenceTypeIdSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/startTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/startDate"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/startEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/startDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startDate"/>


            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/endDate"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/endEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/endDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/endDate"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/createAbsences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAbsence"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>